--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Site Blocker</h1>
+  <h1>Sebastian</h1>
   <div id="blockList">
     <!-- Dynamically added blocked sites will go here -->
   </div>
