still some bugs

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Sebastian</h1>
   <div id="blockList">
-    <!-- Dynamically added blocked sites will go here -->
+    <table id="blockListTable"></table>
   </div>
   <input type="text" id="domain" placeholder="Enter domain">
   <input type="file" id="memeFile" accept="image/*,video/*">
