--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+  <html lang="en">
+    <head>
+        <link rel="stylesheet" href="styles.css"> 
+    </head>
 <body>
   <h1>Sebastian</h1>
   <div id="blockList">
