--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,14 @@
         <link rel="stylesheet" href="styles.css"> 
     </head>
 <body>
-  <h1>Sebastian</h1>
+  <h1>MemeBlock</h1>
   <div id="blockList">
     <table id="blockListTable"></table>
   </div>
-  <input type="text" id="domain" placeholder="Enter domain">
-  <input type="file" id="memeFile" accept="image/*,video/*">
+  <div class = "input-container">
+    <input type="text" id="domain" placeholder="Enter domain">
+    <input type="file" id="memeFile" accept="image/*,video/*">
+  </div>
   <button id="addBlock">Add Block</button>
   <script src="popup.js"></script>
 </body>
